--- a/kairajohnson_project-01.html
+++ b/kairajohnson_project-01.html
@@ -10,13 +10,12 @@
       <div id="welcome_text"></div>
       <button id="letsplay"> Let's Play</button>
       <div id= "trivia_box">
-      <div class="Question">Do you ride a bike 5 or more times a week?</div>
-      <div class="Question">If your in the car and have an empty bottle, Would you  throw it out the window?</div>
-      <div class="Question">Do you reuse old recycable materials? i.e jars, paper, etc.</div>
+        <div id="questionBox"></div>
+      <!-- <div class="Question">Do you reuse old recycable materials? i.e jars, paper, etc.</div>
       <div class="Question">Do you put recyclables in the recycle ben rather than the trash can? </div>
       <div class="Question"></div>
-      <div class="Question"></div>
-      <button id="yes"> YES </button><button id="no"> NO </button></div>
+      <div class="Question"></div> -->
+      <button id="button" onclick="loopquestion()"> YES </button><button id="button" onclick="loopquestion()">NO</button></div></div>
     </div>
    <script src="kairajohnson_project-01.js"></script>
   </body>
