updated at 1:56pm

--- a/kairajohnson_project-01.html
+++ b/kairajohnson_project-01.html
@@ -9,10 +9,20 @@
     <div id = "welcome_page">
       <div id="welcome_text"></div>
       <button id="letsplay"> Let's Play</button>
+<div id ="wrapper">
       <div id= "trivia_box">
         <div id="questionBox"></div>
-      <button id="button" onclick="loopquestion()"> YES </button><button id="button" onclick="loopquestion()">NO</button></div></div>
-    </div>
+      <button id="button" class="yes" style="background-color: transparent; border: none; outline:none;" onclick="loopquestion()"> YES </button>
+      <button id="button" class="no" style="background-color: transparent; border: none; outline:none;" onclick="loopquestion()">NO</button></div>
+      <div id="score-box">
+        <div id="score"></div>
+        <div id="plus-sign"></div>
+
+</div>
+</div>
+<div id="won"></div>
+<div id="lost"></div>
+
    <script src="kairajohnson_project-01.js"></script>
   </body>
 </html>
